--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
 
 <div class="referral" id="referral">
     <div class="close-referral" id="closeReferral">✖</div>
+    <div>Task 1 -- Make 5 invites -- 250.000<div>
+
+    <div>Task 1 -- Make 10 invites -- 1.000.000<div>
+    <div>Task 1 -- Make 30 invites -- 10.000.000 <div>
     <div>Referral Code: <input type="text" id="referralCode" readonly></div>
     <div>Enter Referral Code: <input type="text" id="enterReferralCode"></div>
     <button id="enterCodeButton">Submit</button>
